--- a/polls/static/polls/nav-sidebar.css
+++ b/polls/static/polls/nav-sidebar.css
@@ -148,3 +148,17 @@
 #nav-sidebar table {
     width: 100%;
 }
+
+#nav-sidebar .clickable-row {
+    cursor: pointer;
+}
+#nav-sidebar tr:nth-child(odd).clickable-row:hover {
+    background: #000000;
+}
+#nav-sidebar tr:nth-child(even).clickable-row:hover {
+    background: #181818;
+}
+#nav-sidebar tr:nth-child(odd),
+#nav-sidebar  tr:nth-child(even) {
+    background: #417690;
+}
