--- a/polls/templates/polls/add_objects.html
+++ b/polls/templates/polls/add_objects.html
@@ -9,7 +9,7 @@
             <input id="submit-forms" type="submit" value="Добавить объекты в Базу Данных">
         </div>
         {{ forms.not_form_errors }}
-        <table class="table-centered tabled-forms" style="width: 100%">
+        <table class="table-centered tabled-forms">
             <caption class="text-center sticked-top"> {{ heading }} </caption>
             <thead name="Table header row" class="sticked-top">
                 <tr>
