--- a/polls/templates/polls/base.html
+++ b/polls/templates/polls/base.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %} {{ heading|title }} {% endblock %}
+{% block title %} {{ heading }} {% endblock %}
 
 
 {% block main %}
