--- a/polls/templates/polls/request_detail.html
+++ b/polls/templates/polls/request_detail.html
@@ -1,10 +1,11 @@
 {% extends "polls/base.html" %}
 
+{% block title %} Запрос №{{ request.id }} {% endblock %}
+
 {% block content %}
 
-<div style="padding: 20px">
+<h1 class="text-center"> Запрос № {{ request.id }} </h1>
 <table class="table-centered tabled-forms">
-    <caption> Запрос № {{ request.id }} </caption>
     <tr> 
         <th> Описание запроса </th>
         <td> {{ request.description }} </td>
@@ -22,5 +23,4 @@
         <td> {{ request.get_status_display }} </td>
     </tr>
 </table>
-</div>
 {% endblock %}
