--- a/polls/templates/polls/todo_objects.html
+++ b/polls/templates/polls/todo_objects.html
@@ -9,49 +9,47 @@
             <input type="submit" value="Изменить данные">
         </div>
         {% if forms|length %}
-            {{ forms.not_form_errors }}
-            <table class="table-centered tabled-forms" style="width: 100%">
-                <caption class="text-center sticked-top"> {{ heading }} </caption>
-                <thead name="Table header row" class="sticked-top">
-                    <tr>
-                        {% for field in forms.0.visible_fields %}
-                        <td> {{ field.label }} </td>
-                        {% endfor %}
-                    </tr>
-                </thead>
-                <tbody name="visible forms fields" id="forms-container">
-                    {% for form in forms %}
-                    <tr class="object-form">
-                        {% for field in form.visible_fields %}
-                        <td>
-                            {{ field.errors }}
-                            {% if field.help_text %}
-                            <div data-tip="{{ field.help_text }}">
-                                {{ field }}
-                            </div>
-                            {% else %}
-                                {{ field }}
-                            {% endif %}
-                        </td>
-                        {% endfor %}
-                    </tr>
+        {{ forms.not_form_errors }}
+        <table class="table-centered tabled-forms">
+            <caption class="text-center sticked-top"> {{ heading }} </caption>
+            <thead name="Table header row" class="sticked-top">
+                <tr>
+                    {% for field in forms.0.visible_fields %}
+                    <td> {{ field.label }} </td>
                     {% endfor %}
-                </tbody>
-                <tbody name="hidden forms fields">
-                    {% for form in forms %}
-                    <tr>
-                        {% for field in form.hidden_fields %}
-                        {{ field }}
-                        {% endfor %}
-                    </tr>
+                </tr>
+            </thead>
+            <tbody name="visible forms fields" id="forms-container">
+                {% for form in forms %}
+                <tr class="object-form">
+                    {% for field in form.visible_fields %}
+                    <td>
+                        {{ field.errors }}
+                        {% if field.help_text %}
+                        <div data-tip="{{ field.help_text }}"> {{ field }} </div>
+                        {% else %} 
+                        {{ field }} 
+                        {% endif %}
+                    </td>
                     {% endfor %}
-                </tbody>
-                <tbody name="forms management form">
-                    {{ forms.management_form }}
-                </tbody>
-            </table>
+                </tr>
+                {% endfor %}
+            </tbody>
+            <tbody name="hidden forms fields">
+                {% for form in forms %}
+                <tr>
+                    {% for field in form.hidden_fields %}
+                    {{ field }}
+                    {% endfor %}
+                </tr>
+                {% endfor %}
+            </tbody>
+            <tbody name="forms management form">
+                {{ forms.management_form }}
+            </tbody>
+        </table>
         {% else %}
-            <h1 style="text-align: center;"> Нет данных </h1>
+        <h1 class="text-center"> Все запросы выполнены! </h1>
         {% endif %}
     </div>
 </form>
