--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,11 @@
     <div id='container'>
         <header id="header">
             {% block header %}
-            <div style="margin-left: auto;">
+            <img src="{% static 'polls/favicon.png' %}" width="50px" height="50px" style="margin: .1em 2em;">
+            
+            <div> Отдел Информационного Обеспечения и Технического Развития </div>
+
+            <div>
                 {% if user.is_authenticated %}
                     <form action="/accounts/logout/" method="POST">
                         {% csrf_token %}
