ALLOWED_HOSTS list update. Names for `aside.html` context changed.

--- a/polls/templates/polls/aside.html
+++ b/polls/templates/polls/aside.html
@@ -2,7 +2,7 @@
 <nav id="nav-sidebar" class="sticky">
     <table class="module">
         <tbody>
-            {% for desc, href in nav_sidebar_data.moderation_tables.items %}
+            {% for desc, href in nav_sidebar_data.moderation.items %}
             <tr class="clickable-row" data-href="{{ href }}"> 
                 <th> {{ desc }} </th> 
             </tr>
