--- a/polls/templates/polls/forms_in_table.html
+++ b/polls/templates/polls/forms_in_table.html
@@ -97,9 +97,8 @@
         let formRegex = RegExp(`form-(\\d){1}-`,'g'); // Regex to find all instances of the form number
 
         formNum++; // Increment the form number
-        newForm.innerHTML = newForm.innerHTML.replace(formRegex, `form-${formNum}-`); // Update the new form to have the correct form number
-        container.appendChild(newForm); // Insert the new form at the end of the list of forms
-        newForm.scrollIntoView();
+        newForm.innerHTML = newForm.innerHTML.replace(formRegex, `form-${formNum}-`); // Update the new form to have the correct form number        
+        container.insertBefore(newForm, container.firstChild);
 
         totalForms.setAttribute('value', `${formNum+1}`); // Increment the number of total forms in the management form
     };
