--- a/templates/base.html
+++ b/templates/base.html
@@ -14,14 +14,14 @@
     <title> {% block title %} Журнал оргтехники УГМС по ЛНР {% endblock %}</title>
 </head>
 <body>
-    <div id='container'>
+    <div id='container'>        
+        <div style="display: flex; justify-content: space-evenly; align-items: center;">
+            <img src="{% static 'polls/favicon.png' %}" width="100px" style="margin: 1em 15em 1em 0;">    
+            <div style="font-size: 3em;" class="text-center"> Отдел Информационного Обеспечения и Технического Развития </div>
+        </div>
         <header id="header">
             {% block header %}
-            <img src="{% static 'polls/favicon.png' %}" width="50px" height="50px" style="margin: .1em 2em;">
-            
-            <div> Отдел Информационного Обеспечения и Технического Развития </div>
-
-            <div>
+            <div style="margin-left: auto;">
                 {% if user.is_authenticated %}
                     <form action="/accounts/logout/" method="POST">
                         {% csrf_token %}
