--- a/templates/base.html
+++ b/templates/base.html
@@ -15,10 +15,8 @@
 </head>
 <body>
     <div id='container'>        
-        <div style="display: flex; justify-content: space-evenly; align-items: center;">
-            <img src="{% static 'polls/favicon.png' %}" width="100px" style="margin: 1em 15em 1em 0;">    
-            <div style="font-size: 3em;" class="text-center"> Отдел Информационного Обеспечения и Технического Развития </div>
-        </div>
+        {% block preheader %}
+        {% endblock %}
         <header id="header">
             {% block header %}
             <div style="margin-left: auto;">
