abbreviations added for structure. creation request form aligned to center

--- a/polls/templates/polls/request_form.html
+++ b/polls/templates/polls/request_form.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <h1 class="text-center"> Создать запрос </h1>
-<div>
+<div style="margin: 0 auto; width: min-content;">
     <form action="" method="POST">
         {% csrf_token %}
         <table class="table-centered tabled-forms">
