--- a/polls/static/polls/dark-mode.css
+++ b/polls/static/polls/dark-mode.css
@@ -31,6 +31,9 @@
       --close-button-bg: #333333;
       --close-button-hover-bg: #666666;
 
+      --scrollbar-thumb-hover: var(--button-hover);
+      --scrollbar-thumb: #484e51;
+
       color-scheme: dark;
     }
   }
@@ -67,6 +70,9 @@ html[data-theme="dark"] {
 
     --close-button-bg: #333333;
     --close-button-hover-bg: #666666;
+
+    --scrollbar-thumb-hover: var(--button-hover);
+    --scrollbar-thumb: #484e51;
 
     color-scheme: dark;
 }
