--- a/polls/static/polls/nav-sidebar.css
+++ b/polls/static/polls/nav-sidebar.css
@@ -1,17 +1,14 @@
-.sticky {
+.toggle-nav-sidebar {
+    z-index: 20;
     position: sticky;
     top: 0;
     max-height: 100vh;
-}
-
-.toggle-nav-sidebar {
-    z-index: 20;
     left: 0;
     display: flex;
     align-items: center;
     justify-content: center;
-    flex: 0 0 23px;
-    width: 23px;
+    flex: 0 0 1.4375rem;
+    width: 1.4375rem;
     border: 0;
     border-right: 1px solid var(--hairline-color);
     background-color: var(--body-bg);
@@ -33,9 +30,10 @@
 
 #nav-sidebar {
     z-index: 15;
-    flex: 0 0 275px;
-    left: -276px;
-    margin-left: -276px;
+    position: sticky;
+    flex: 0 0 17.1875rem;
+    left: -17.25rem;
+    margin-left: -17.25rem;
     border-top: 1px solid transparent;
     border-right: 1px solid var(--hairline-color);
     background-color: var(--body-bg);
@@ -47,19 +45,19 @@
     border-right: 0;
     left: 0;
     margin-left: 0;
-    right: -276px;
-    margin-right: -276px;
+    right: -17.25rem;
+    margin-right: -17.25rem;
 }
 
 .toggle-nav-sidebar::before {
     content: '\00BB';
 }
 
-.main.shifted .toggle-nav-sidebar::before {
+.main.shifted > .toggle-nav-sidebar::before {
     content: '\00AB';
 }
 
-.main > #nav-sidebar {
+.main.shifted > #nav-sidebar {
     visibility: hidden;
 }
 
@@ -68,7 +66,7 @@
     visibility: visible;
 }
 
-[dir="rtl"] .main.shifted > #nav-sidebar {
+[dir="rtl"] .main.shifted  #nav-sidebar {
     margin-right: 0;
 }
 
@@ -79,7 +77,7 @@
 
 #nav-sidebar .module th,
 #nav-sidebar .module caption {
-    padding-left: 16px;
+    padding-left: 1.8rem;
 }
 
 #nav-sidebar .module td {
@@ -88,61 +86,8 @@
 
 [dir="rtl"] #nav-sidebar .module th,
 [dir="rtl"] #nav-sidebar .module caption {
-    padding-left: 8px;
-    padding-right: 16px;
-}
-
-#nav-sidebar .current-app .section:link,
-#nav-sidebar .current-app .section:visited {
-    color: var(--header-color);
-    font-weight: bold;
-}
-
-#nav-sidebar .current-model {
-    background: var(--selected-row);
-}
-
-@media (forced-colors: active) {
-    #nav-sidebar .current-model {
-        background-color: SelectedItem;
-    }
-}
-
-.main > #nav-sidebar + .content {
-    max-width: calc(100% - 23px);
-}
-
-.main.shifted > #nav-sidebar + .content {
-    max-width: calc(100% - 299px);
-}
-
-@media (max-width: 767px) {
-    #nav-sidebar, #toggle-nav-sidebar {
-        display: none;
-    }
-
-    .main > #nav-sidebar + .content,
-    .main.shifted > #nav-sidebar + .content {
-        max-width: 100%;
-    }
-}
-
-#nav-filter {
-    width: 100%;
-    box-sizing: border-box;
-    padding: 2px 5px;
-    margin: 5px 0;
-    border: 1px solid var(--border-color);
-    background-color: var(--darkened-bg);
-    color: var(--body-fg);
-}
-
-#nav-filter:focus {
-    border-color: var(--body-quiet-color);
-}
-
-#nav-filter.no-results {
-    background: var(--message-error-bg);
+    padding-left: .5rem;
+    padding-right: 1rem;
 }
 
 #nav-sidebar table {
@@ -152,13 +97,15 @@
 #nav-sidebar .clickable-row {
     cursor: pointer;
 }
-#nav-sidebar tr:nth-child(odd).clickable-row:hover {
-    background: #000000;
-}
-#nav-sidebar tr:nth-child(even).clickable-row:hover {
-    background: #181818;
-}
+
 #nav-sidebar tr:nth-child(odd),
 #nav-sidebar  tr:nth-child(even) {
     background: #417690;
+}
+
+#nav-sidebar tr:nth-child(odd).clickable-row:hover {
+    background: var(--body-bg);
+}
+#nav-sidebar tr:nth-child(even).clickable-row:hover {
+    background: var(--darkened-bg);
 }
