--- a/templates/500.html
+++ b/templates/500.html
@@ -2,9 +2,7 @@
 
 {% block title %} Страница не найдена {% endblock %}
 
-{% block main %}
-<main class="content" id="content-start"> 
-    <h1 class="text-center"> Не удалось обработать ваш запрос </h1>
-    <h2 class="text-center"> <a href="/"> Вернуться на главную страницу </a> </h2>
-</main>
+{% block content %} 
+    <h1> Не удалось обработать ваш запрос </h1>
+    <h2> <a href="/"> Вернуться на главную страницу </a> </h2>
 {% endblock %}
