--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,43 +2,35 @@
 
 {% load static %}
 
-{% block head %}
-    <link rel="stylesheet" href="{% static 'registration/login.css' %}">
+{% block additional_head %}
+<link rel="stylesheet" href="{% static 'registration/login.css' %}">
 {% endblock %}
-
-{% block title %} Войти {% endblock %}
 
 {% block header %}
-    <h1> Вход в аккаунт </h1>
+<h1> Вход в аккаунт </h1>
 {% endblock %}
 
-{% block main %}
-<main id="content-start" class="content">
-    <div id="content">
-        <div id="content-main">
-            {% if form.errors %}
-                <p>Неправильное имя пользователя или пароль.</p>
-            {% endif %}
+{% block content %}
+{% if form.errors %} 
+<p class="errornote"> Пожалуйста, введите корректные имя пользователя и пароль учётной записи. Оба поля могут быть чувствительны к регистру. </p> 
+{% endif %}
 
-            <form method="post" action="{% url 'login' %}">
-                {% csrf_token %}
-                <div class='form-row'>        
-                    {{ form.username.label_tag }}
-                    {{ form.username }}
-                </div>
-                <div class='form-row'>                
-                    {{ form.password.label_tag }}
-                    {{ form.password }}
-                </div>
-                <div class='submit-row'>
-                    <input type="submit" value="Войти">
-                </div>
-                <input type="hidden" name="next" value="{{ next }}">
-                <br class="clear">
-            </form>
-        </div>
+<form method="post" action="{% url 'login' %}">
+    {% csrf_token %}
+    <div class='form-row'>        
+        {{ form.username.label_tag }}
+        {{ form.username }}
     </div>
-</main>
+    <div class='form-row'>                
+        {{ form.password.label_tag }}
+        {{ form.password }}
+    </div>
+    <div class='submit-row'>
+        <input type="submit" value="Войти">
+    </div>
+    <input type="hidden" name="next" value="{{ next }}">
+    <br class="clear">
+</form>
 {% endblock %}
 
 {% block footer %}
