--- a/templates/aside.html
+++ b/templates/aside.html
@@ -1,4 +1,4 @@
-<button id="toggle-nav-sidebar" class="toggle-nav-sidebar"> </button>
+<button id="toggle-nav-sidebar" class="toggle-nav-sidebar" aria-label="Переключить боковую навигацию"> </button>
 <nav id="nav-sidebar">
     <table class="module">
         <tbody>
