--- a/templates/base_site.html
+++ b/templates/base_site.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block header %}
-<img src="{% static 'polls/favicon.png' %}" width="100px">    
+<img src="{% static 'polls/favicon.webp' %}" width="100px" height="100px" alt="Логотип РосГидроМет">    
 <h1> Отдел Информационного Обеспечения и Технического Развития </h1>
 {% endblock %}
 
